--- a/performance-javascript/index.html
+++ b/performance-javascript/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Javascript não performático</title>
+  <title>Javascript performático</title>
 </head>
 
 <body>
-  <h1>Javascript não performático</h1>
+  <h1>Javascript performático</h1>
 
   <button id='clickButton'>Clique aqui</button>
 
