english and organize code

--- a/non-performance-javascript/index.html
+++ b/non-performance-javascript/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Javascript não performático</title>
+  <title>Non-performance Javascript</title>
 </head>
 
 <body>
-  <h1>Javascript não performático</h1>
+  <h1>Non-performance Javascript</h1>
 
-  <button id='clickButton'>Clique aqui</button>
+  <button id='clickButton'>Insert timestamp</button>
 
   <ul id="data"></ul>
 
